# polynewsbot

./: .gitignore  DEVELOPMENT_PLAN.md  QUANT_REVIEW.md  TESTING_GUIDE.md  pyproject.toml
Docs/: Arbitrage Engine voor Prediction Markets.txt  Hoofdstuk 1 Het Idee News-Driven Prediction Trading.txt  Hoofdstuk 2 — Hoe Prediction Markets Prijzen Werken.txt  Hoofdstuk 3 — Architectuur van de AI News Bot.txt  Hoofdstuk 4 — Integratie met jouw OCLW Bot.txt  Hoofdstuk 5 — De Werkelijke Edge Snelheid, Informatie en Interpretatie.txt  Hoofdstuk 6 — Strategie, Risico en Schaalbaarheid.txt  Json_info.txt  PROJECT_BOOTSTRAP_TEMPLATE.md  mentor instructie.txt  table of contents start book .txt
configs/: .env.example  default.yaml
data/: orders_state.json
scripts/: debug_cycle.py  debug_orderbook.py
src/: cli.py
src/ai/: MODULE_CONTEXT.md  hybrid.py  llm_client.py  llm_probability.py  llm_resolution.py  prompts.py
src/audit/: MODULE_CONTEXT.md  decision_logger.py  performance.py  replay.py  reporter.py
src/config/: MODULE_CONTEXT.md  __init__.py  loader.py  logging.py
src/edge/: MODULE_CONTEXT.md  engine.py
src/execution/: MODULE_CONTEXT.md  order_manager.py  polymarket_client.py
src/filter/: MODULE_CONTEXT.md  relevance.py
src/mapping/: MODULE_CONTEXT.md  market_mapper.py  universe.py
src/market_state/: MODULE_CONTEXT.md  analyzer.py
src/models/: MODULE_CONTEXT.md  __init__.py  events.py  markets.py  probability.py  trades.py
src/monitor/: MODULE_CONTEXT.md  counter_news.py  exit_engine.py  position_monitor.py
src/news/: base.py  (+5 more)
tests/: conftest.py
(+28 files in other folders)
